<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/monserrate"
    tools:context="johannpolania.com.turismobogota.MainActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">




<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/Titulos"
        android:gravity="center"
        android:layout_gravity="center"

        />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/bogota"      />


</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publicidad_bogota"
            style="@style/bodyText"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/hoteles"
            android:id="@+id/hoteles"
            android:onClick="lanzar"
            />

        <Button
        android:layout_width="0dp"
            android:layout_weight="0.5"
        android:layout_height="wrap_content"
        android:text="@string/Bares"
            android:onClick="lanzarBar"

        />






    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
        <Button
            android:layout_width="wrap_content"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:text="@string/sitios"
           android:onClick="lanzarSitio"
            />

        <Button
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:text="@string/InformacionDemografica"
           android:onClick="lanzarDemo"
            android:layout_weight="0.20" />






    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autor"
            android:onClick="lanzarAutor"
            />


    </LinearLayout>


</LinearLayout>

</ScrollView>

</LinearLayout>


